tests/errors/scope.knv
fn main() -> void {
    {
        let foo = 25;
    }
    exit foo;
}
